# OpenU-C-Programming

./: README.md
mmn_11/Question_01/: doll.c  makefile
mmn_11/doll/: README.md  doll.c  input_01.txt  input_02.txt
mmn_11/my_cos/: README.md  input_02.txt  makefile  my_cos.c
mmn_12/: README.md  constants.h  error_input_01.txt  error_input_02⁩.txt  get_name.c  get_name_util.c  get_name_util.h  makefile  name_list_input_01.txt
mmn_12/input_files/: name_list_input_02.txt
mmn_22/mainmat/: CMakeLists.txt  README.md  constants.h  error_utility.c  error_utility.h  globals.h  mainmat.c  mainmat.h  makefile  message_utility.h  mymat.c  mymat.h  process_input.c  process_input.h  tables_utility.c  utility.c  utility.h
mmn_22/mainmat/input_files/: invalid_input_01.txt  invalid_input_02.txt  valid_input_01.txt  valid_input_02.txt
mmn_22/mainmat/output_files/: output_invalid_input_01.txt  output_invalid_input_02.txt  output_valid_input_01.txt  output_valid_input_02.txt
mmn_23/: CMakeLists.txt  README.md  constants.h  error_utility.c  error_utility.h  globals.h  hash_utility.c  hash_utility.h  index.c  index.h  makefile  utility.c  utility.h
mmn_23/input_files/: input_03.txt
